--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,9 @@ list(TRANSFORM EXTERNAL_INCLUDES PREPEND "${PROJECT_SOURCE_DIR}/../" REGEX "^(.*
 list(TRANSFORM STATIC_LINKS PREPEND "${PROJECT_SOURCE_DIR}/../" REGEX "^(.*)$" )
 list(APPEND LINKS ${STATIC_LINKS})
 
-# AUTOGIT STUFF #########
-include(../AutoGitVersion/AutoGitVersion.cmake) # Defined cmake functions : AutoGitVersion and others
-AutoGitVersion()                 # Sets up a target git_version.cpp that constains  kGitHash and GitTag as const
-set(DEPENDS_ON_GIT_VERSION git_version)
+# AUTOGIT STUFF #########   
+include(../AutoGitVersion/AutoGitVersion.cmake )   # Defined cmake functions : AutoGitVersion and others
+AutoGitVersion(GIT_VERSION_TARGET ${PROJECT_NAME}) # Sets up a target git_version.cpp that constains  kGitHash and GitTag as const
 #########################
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -61,7 +60,7 @@ include_directories(${EXTERNAL_INCLUDES})
 #linking 
 set_target_properties(${LIB_NAME}_py PROPERTIES PREFIX "${SHARED_LIB_PREFIX}")
 set_target_properties(${LIB_NAME}_py PROPERTIES SUFFIX ${SHARED_LIB_SUFFIX})
-target_link_libraries(${LIB_NAME}_py ${DEPENDS_ON_GIT_VERSION} ${LINKS})
+target_link_libraries(${LIB_NAME}_py ${GIT_VERSION_TARGET} ${LINKS})
 set_target_properties(${LIB_NAME} PROPERTIES PREFIX "${SHARED_LIB_PREFIX}")
 target_link_libraries(${LIB_NAME} ${LINKS})
 
